data/derived/comb/progs/unify/prog6163.ml.out
Characters 90-91:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> 'c -> 'a -> 'a -> 'b
       but an expression was expected of type ('a -> 'b) -> 'c -> 'a -> 'b
       The type variable 'b occurs inside 'a -> 'b
